...
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/welcome_to_lunchbox"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.945"
        app:layout_constraintBottom_toTopOf="@+id/btnNavigateToSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

...
