<resources>
    <string name="app_name">LunchBox</string>
    <string name="title_activity_search">SearchActivity</string>
    <string-array name="price_filter_options">
        <item>Price</item>
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
    </string-array>

    <string-array name="usa_state_options">
        <item>Select</item>
        <item>New York</item>
        <item>Washington</item>

    </string-array>
    <string name="distance_hint">Max distance (miles)</string>
    <string name="search_hint">Search</string>
    <string name="prox_sort_label">Proximity</string>
    <string name="rate_sort_label">Rating</string>
    <string name="search_button_label">Search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="rest_name">Restaurant Name</string>
    <string name="rest_rating">0.0</string>
    <string name="rest_price">$$$</string>
    <string name="address">Address Unknown</string>
    <string name="reviews_label">Reviews</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_lunchbox">Welcome to LunchBox!!</string>
    <string name="sort_label">Sort by</string>
    <string name="no_results_message">Sorry, no restaurants match the given criteria</string>
    <string name="no_user_results_message">Sorry, no users match the given username</string>
    <string name="navigateToPostReview_button_label">Add Review</string>

    <string name="add_review_heading">Add Review</string>
    <string name="rating_label">Rating</string>
    <string name="review_label">Review</string>
    <string name="comment_hint">Enter your review here</string>
    <string name="price_symbol_label">Price Symbol</string>
    <string name="add_review_button">Add Review</string>
    <string name="update_review_button">Update Review</string>

    <string name="add_restaurant_heading">Add Restaurant</string>
    <string name="restaurant_name_label">Restaurant Name</string>
    <string name="enter_restaurant_name">Enter restaurant name</string>
    <string name="address_label">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="city_state_label">City, State</string>
    <string name="country_postalcode_label">Country, Postal Code</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_postalcode">Enter Postal Code</string>
    <string name="latitude_longitude_label">Latitude, Longitude</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="add_restaurant_button">Add Restaurant</string>
    <string name="action_login">Log in</string>
    <string name="search_friends">search friends icon\n</string>

    <string name="profile_username">Username</string>
    <string name="profile_date">Date Joined</string>
    <string name="profile_friends_button">See Friends</string>
    <string name="add_friends_button">Add Friend</string>

    <string name="notifications_label">Notifications</string>

    <string name="login_label">Log In</string>
    <string name="signup_label">Sign Up</string>
    <string name="search_btn">Search Restaurants</string>
    <string name="profile_btn">My Profile</string>
    <string name="find_friends">Find Friends</string>
    <string name="logout">Logout</string>
    <string name="user_search_btn">Search Users</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>

    <string name="confirm_delete_message">Are you sure you want to delete this item?</string>
    <string name="confirm_delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>