<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".view.RestaurantFragment">

    <TextView
        android:id="@+id/restaurantRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:text="@string/rest_rating"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

<!--        <LinearLayout-->
<!--            android:id="@+id/restaurantTitle_linearLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="1">-->

<!--&lt;!&ndash;            <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/restaurantName"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="0dp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_marginStart="10sp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_weight="0.85"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="@string/rest_name"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textSize="25sp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textStyle="bold" />&ndash;&gt;-->

<!--            <TextView-->
<!--                android:id="@+id/restaurantRating"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="15sp"-->
<!--                android:layout_marginEnd="10sp"-->
<!--                android:layout_weight="0.15"-->
<!--                android:text="@string/rest_rating"-->
<!--                android:textSize="25sp" />-->
<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/priceRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_bar_height"
            android:layout_marginStart="10sp"
            android:text="@string/rest_price" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/address"
            tools:layout_marginBottom="10sp" />

        <Button
            android:id="@+id/btnNavigateToPostReview"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100sp"
            android:layout_marginVertical="10sp"
            android:text="@string/navigateToPostReview_button_label"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/restaurantTitle_linearLayout" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewRecyclerView"

        android:layout_width="395dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
