...
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

<!--    <EditText-->
<!--        android:id="@+id/searchTermText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="@dimen/app_bar_height"-->
<!--        android:hint="@string/search_hint"-->
<!--        android:inputType="text"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
...
            android:text="@string/rate_sort_label" />

    </RadioGroup>

<!--    &lt;!&ndash; Search Button &ndash;&gt;-->
<!--    <Button-->
<!--        android:id="@+id/searchButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/search_button_label"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/sortRadioGroup" />-->
...
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/no_results_message"
        android:textSize="16sp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/searchResultsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortRadioGroup"
        app:layout_constraintVertical_bias="0.0" />

...
